# stm32f10x_QtCreator

./: .gitignore  CMakeLists.txt
StdPeriph_Driver/CMSIS/5.0.1/CMSIS/Documentation/Core/html/: index.doxyidx
StdPeriph_Driver/CMSIS/5.0.1/CMSIS/Documentation/DSP/html/: index.doxyidx
StdPeriph_Driver/CMSIS/5.0.1/CMSIS/Documentation/Driver/html/: index.doxyidx
StdPeriph_Driver/CMSIS/5.0.1/CMSIS/Documentation/RTOS/html/: index.doxyidx
StdPeriph_Driver/CMSIS/5.0.1/CMSIS/Documentation/RTOS2/html/: index.doxyidx
StdPeriph_Driver/CMSIS/5.0.1/CMSIS/RTOS2/RTX/Examples/TrustZoneV8M/NoRTOS/CM33_ns/: CM33_ns.uvoptx
StdPeriph_Driver/CMSIS/5.0.1/CMSIS/RTOS2/RTX/Examples/TrustZoneV8M/NoRTOS/CM33_s/: CM33_s.uvoptx
StdPeriph_Driver/CMSIS/5.0.1/CMSIS/RTOS2/RTX/Examples/TrustZoneV8M/RTOS/CM33_ns/: CM33_ns.uvoptx  main_ns.c
StdPeriph_Driver/CMSIS/5.0.1/CMSIS/RTOS2/RTX/Examples/TrustZoneV8M/RTOS/CM33_s/: CM33_s.uvoptx
StdPeriph_Driver/CMSIS/5.0.1/CMSIS/RTOS2/RTX/Examples/TrustZoneV8M/RTOS_Faults/: CM33_TZ_config.txt
StdPeriph_Driver/CMSIS/5.0.1/CMSIS/RTOS2/RTX/Examples/TrustZoneV8M/RTOS_Faults/CM33_ns/: CM33_ns.uvoptx  main_ns.c
StdPeriph_Driver/CMSIS/5.0.1/CMSIS/RTOS2/RTX/Examples/TrustZoneV8M/RTOS_Faults/CM33_s/: CM33_s.uvoptx
StdPeriph_Driver/CMSIS/5.0.1/CMSIS/Utilities/: PACK.xsd
StdPeriph_Driver/CMSIS/5.0.1/Device/ARM/SVD/: ARMCM0.SFR  ARMCM0.sfd  ARMCM0P.SFR  ARMCM0P.sfd  ARMCM23.SFR  ARMCM23.sfd  ARMCM3.SFR  ARMCM3.sfd  ARMCM33.SFR  ARMCM33.sfd  ARMCM4.SFR  ARMCM4.sfd  ARMCM7.SFR  ARMCM7.sfd  ARMSC000.SFR  ARMSC000.sfd  ARMSC300.SFR  ARMSC300.sfd  ARMv8MBL.SFR  ARMv8MBL.sfd  ARMv8MML.SFR  ARMv8MML.sfd
StdPeriph_Driver/inc/: RTE_Components.h
src/: main.c
